--- a/_posts/2024-11-16-cooldown.md
+++ b/_posts/2024-11-16-cooldown.md
@@ -19,6 +19,11 @@ I finally got around to turning a spare pi 4B+ into a docker image registry serv
 
 
 In doing the above, I returned the fan back to the pi case and I installed a small spare 12v fan I had lying around. I tied it's power into the input terminals for the stepdown converter (stepping 12v from the OPENCR board) down to the 5V of the arduino.
-<img src="assets/blog/Nov24/cooldown.jpg" alt="Docker cmd line" style="display: block; margin: 0 auto; width:100%; max-width:400px;" />
-
 Lastly, today I integrated my custom rfid publishing package into the turtlebot3_bringup_custom package which I had previously containerized. This package translates incoming serial data from the rfid assembly and outputs the detected rfid identity to the /rfid topic for later use.
+
+<br>
+<br>
+<footer>
+    Blog content © Brennan Drake, 2024. Licensed under a 
+    <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a>.
+</footer>
